# hermes-penfield

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  plugin.yaml  provider.py  pyproject.toml  tools.py
.github/workflows/: ci.yml
docs/: save-context-research.md
docs/adr/: 0001-record-architecture-decisions.md  0002-stdlib-only-http.md  0003-environment-switching.md  0003-spec-vs-real-api-divergence.md  0004-environment-switching.md  0004-missing-lifecycle-endpoints.md  0005-missing-lifecycle-endpoints.md  0005-two-auth-paths.md  0006-awaken-supplements-soul.md  0006-two-auth-paths.md  0007-provider-duck-types-hermes-abc.md  0007-secret-shape-rejection.md  0008-awaken-supplements-soul.md  0008-no-builtin-mirror-by-default.md  0009-real-user-agent-required.md  0009-secret-shape-rejection.md  0010-directory-discovery-not-entry-points.md  0010-no-builtin-mirror-by-default.md  0011-context-tools-partial-implementation.md  0011-context-tools.md  0011-integration-tests-hit-live-dev-api.md  0012-pre-compress-save-context.md  0012-real-user-agent-required.md  0013-validate-seams-against-real-source.md  0014-directory-discovery-not-entry-points.md  README.md
hermes_penfield/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  constants.py  provider.py  tools.py
hermes_penfield/plugin_data/: README.md
plugin_dir/: __init__.py  plugin.yaml
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_mcp_drift.py  test_plugin_contract.py  test_provider.py  test_provider_tools.py  test_tools.py
